xwayland: Fix keysniffing repeating keys

If the modifier key is released, the key filter may return false but we
still want to send the release event for the regular key.

BUG: 510404


(cherry picked from commit 2459c02ac61cfbf744af02ebcec369db38ac4eb9)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>